# SSP-Framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
checkpoints/: README.md
configs/datasets/: README.md
configs/evaluation/: README.md
configs/inference/: README.md
configs/models/: README.md
configs/rl/: README.md
configs/training/: README.md
datasets/: README.md  entry.py  loader.py  preprocessing.py  prompt_builder.py  registry.py  tokenizer.py  verifiers.py
docs/: api_reference.md  architecture.md  installation.md  quick_start.md  research_notes.md  tutorials.md
evaluation/: README.md
examples/: README.md
experiments/: README.md
generation/spectrum_engine/: generate.py
generation/spectrum_engine/configs/: api_openrouter.yaml  experiment_ablation.yaml  sampling_diverse.yaml  vllm_local.yaml
generation/spectrum_engine/core/: __init__.py  builder.py  composer.py  config.py  diversity.py  exceptions.py  executor.py  experiment.py  job.py  parser.py  recipe.py  types.py  verifier.py
generation/spectrum_engine/prompts/: registry.py  template.py
generation/spectrum_engine/prompts/personas/: alternative.md  analytical.md  competition.md  creative.md  minimalist.md  researcher.md  teacher.md  verifier.md
generation/spectrum_engine/prompts/styles/: alternative_solution.md  concise.md  detailed.md  multiple_methods.md  standard.md
generation/spectrum_engine/providers/: api_provider.py  base.py  vllm_provider.py
generation/spectrum_engine/recipes/: math_v1.yaml
generation/spectrum_engine/scheduler/: base.py  batch_scheduler.py
generation/spectrum_engine/storage/: base.py  checkpoint.py  jsonl_storage.py
generation/spectrum_engine/tests/: test_api_provider.py  test_builder.py  test_executor.py  test_experiment.py  test_parser.py  test_recipe_planner_composer.py  test_scheduler.py  test_storage.py  test_verifier.py  test_vllm_provider.py
generation/spectrum_engine/utils/: logging.py  metrics.py  retry.py
logs/: README.md
models/: README.md  diversity.py  generator.py
notebooks/: README.md
outputs/: README.md
papers/: README.md  ssp_architecture_compliance_audit.md  ssp_data_model_and_interfaces.md  ssp_implementation_plan.md
rl/: README.md
scripts/: README.md  convert_checkpoint.py  evaluate.py  export_model.py  prepare_dataset.py  train.py
ssp_framework/: __init__.py
ssp_framework/core/: __init__.py  config.py
ssp_framework/data/: __init__.py
ssp_framework/evaluation/: __init__.py
ssp_framework/rl/: __init__.py
ssp_framework/supervised/: __init__.py
ssp_framework/utils/: __init__.py
tests/: __init__.py  conftest.py  test_datasets.py  test_generator.py  test_import.py  test_verifiers.py
tests/core/: __init__.py  test_config.py
training/: README.md
