[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssp-research"
version = "0.1.0"
description = "Personal post-training research lab exploring the Spectrum-to-Signal Principle (SSP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.16.0",
    "wandb>=0.16.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
]

[tool.setuptools]
py-modules = []
